<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".ui.activity.AddStoryActivity">

  <androidx.appcompat.widget.Toolbar
    android:id="@+id/my_toolbar"
    style="@style/ToolbarTheme"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="@dimen/margin_edge"
    android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:title="@string/new_story" />

  <ScrollView
    android:id="@+id/scroll_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="?attr/actionBarSize">

    <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

      <ImageView
        android:id="@+id/iv_preview"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginHorizontal="@dimen/margin_edge"
        android:layout_marginTop="@dimen/margin_edge"
        android:contentDescription="@string/image_preview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_place_holder" />

      <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switchCompat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:padding="15dp"
        app:layout_constraintEnd_toEndOf="@+id/et_description"
        app:layout_constraintTop_toBottomOf="@+id/et_description" />

      <Button
        android:id="@+id/btn_gallery"
        style="@style/BtnRegular"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_spacing"
        android:text="@string/gallery"
        app:layout_constraintEnd_toEndOf="@+id/et_description"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@+id/btn_camera_x" />

      <Button
        android:id="@+id/btn_camera_x"
        style="@style/BtnRegular"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="@dimen/margin_spacing"
        android:text="@string/camera"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="@+id/et_description"
        app:layout_constraintTop_toBottomOf="@+id/iv_preview" />

      <EditText
        android:id="@+id/et_description"
        style="@style/EditTextGeneral"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_edge"
        android:layout_marginTop="16dp"
        android:autofillHints="Your description"
        android:background="@drawable/border_corner_10"
        android:gravity="start"
        android:hint="@string/description"
        android:inputType="textMultiLine"
        android:maxLines="7"
        android:minLines="7"
        android:padding="10dp"
        android:scrollbars="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_gallery" />

      <TextView
        style="@style/TextViewRegular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/share_location"
        app:layout_constraintBottom_toBottomOf="@+id/switchCompat"
        app:layout_constraintStart_toStartOf="@+id/et_description"
        app:layout_constraintTop_toTopOf="@+id/switchCompat" />

      <Button
        android:id="@+id/btn_upload"
        style="@style/BtnRegular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_edge"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/post_story"
        android:text="@string/upload"
        app:layout_constraintEnd_toEndOf="@+id/et_description"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/et_description"
        app:layout_constraintTop_toBottomOf="@+id/switchCompat" />

      <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="?attr/actionBarSize"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

      <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    </androidx.constraintlayout.widget.ConstraintLayout>


  </ScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
