<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@color/gray_light"
  tools:context=".ui.activity.ListStoryActivity">

  <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
    android:id="@+id/swipe_refresh"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="55dp"
    app:layout_constraintTop_toTopOf="@id/toolbar">

    <androidx.recyclerview.widget.RecyclerView
      android:id="@+id/rv_story"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:clipToPadding="false"
      android:paddingTop="@dimen/margin_edge"
      app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
      tools:listitem="@layout/item_list_story" />
  </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

  <androidx.appcompat.widget.Toolbar
    android:id="@+id/toolbar"
    style="@style/ToolbarTheme"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="end"
    android:paddingTop="@dimen/margin_edge"
    android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:title="@string/list_story" />

  <ImageButton
    android:id="@+id/iv_add_story"
    style="@style/BtnActionBar"
    android:layout_marginTop="@dimen/margin_edge"
    android:layout_marginEnd="8dp"
    android:background="?actionBarItemBackground"
    android:contentDescription="@string/add_story"
    android:src="@drawable/ic_capture"
    app:layout_constraintBottom_toBottomOf="@+id/toolbar"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

  <ImageButton
    android:id="@+id/iv_show_map"
    style="@style/BtnActionBar"
    android:layout_marginTop="@dimen/margin_edge"
    android:contentDescription="@string/title_activity_maps"
    android:src="@drawable/ic_show_map"
    app:layout_constraintBottom_toBottomOf="@+id/toolbar"
    app:layout_constraintEnd_toStartOf="@+id/iv_add_story"
    app:layout_constraintTop_toTopOf="parent" />

  <include
    android:id="@+id/view_error"
    layout="@layout/view_error"
    android:visibility="gone"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>